Fix loader on small screens

--- a/app/assets/stylesheets/application/modules/_figures.scss
+++ b/app/assets/stylesheets/application/modules/_figures.scss
@@ -14,9 +14,11 @@ iframe {
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 @keyframes spin {
